--- a/static/style-gestionale.css
+++ b/static/style-gestionale.css
@@ -4,21 +4,29 @@
 }
 
 .titolo{
-    font-size: 50px;
-    color: #9F1609;
-    margin-left: 809px;
-    margin-top: 423px;
+    margin-top: 3rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
 }
-
-.titolo::after{
+.title{
+    font-size: 3.125rem;
+    color: #9F1609;
+    justify-content: bottom;
+    margin-bottom: 1.5rem;
+    font-family: 'Basement Grotesque', sans-serif;
+}
+.title::after{
     content: "";
-    width: 242px;
-    height: 0.168rem;
+    width: 100%;
+    height: 0.169rem;
     background-color: black;
     opacity: 20%;
     margin-top: 1.5rem;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-bottom: 0.5rem;
+    margin-bottom: 0.5rem
+    
 }
