--- a/static/style-gestionale.css
+++ b/static/style-gestionale.css
@@ -68,6 +68,16 @@
     margin-bottom: -30px;
 }
 
+.forgotpass{
+    color: #9F1609;
+    text-align: center;
+    margin-bottom: -5px;
+    margin-top: -20px;
+    font-size: 12px;
+    padding-top: 21px;
+    text-decoration:underline;
+}
+
 .btn{
     width: 16.125rem;
     height: 2.25rem;
@@ -86,7 +96,20 @@
     background-color: #9F1609;
 }
 
+.accedi{
+    font-family: 'Basement Grotesque', sans-serif;
+    font-size: 14px;
+    margin-top: 0.313rem;
+}
 
+.privacy{
+    color: #9F1609;
+    text-align: center;
+    margin-top: 34px;
+    text-decoration: underline;
+    font-size: 12px;
+    font-family: 'Argentum Sans', sans-serif;
+}
 
 
     
