--- a/style-regster.css
+++ b/style-regster.css
@@ -75,6 +75,9 @@
     outline: none;
     border: 2px solid #9F1609;
 }
+.form > input:focus{
+    top: -85px;
+}
 .btn{
     width: 15.125rem;
     height: 2.25rem;
