--- a/static/style-gestionale.css
+++ b/static/style-gestionale.css
@@ -3,7 +3,6 @@
     src: url(../fonts/ArgentumSans-Medium.ttf);
     src: url(../fonts/ArgentumSans-SemiBold.ttf);
 }
-
 @font-face {
     font-family: 'Basement Grotesque', sans-serif;
     src: url(../fonts/BasementGrotesque-Black_v1.202.otf);
@@ -148,5 +147,10 @@
     align-items: center;
 }
 
+.titolo{
+    font-size: 100px;
+    font-family: 'Argentum Sans', sans-serif;
+
+}
 
     
