--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -89,3 +89,17 @@ body{
     margin-top: 10px;
 }
 
+.btn{
+    width: 150px;
+    height: 50px;
+    border-radius: 25px;
+    margin-left: 850px;
+    margin-top: 20px;
+}
+
+.inizia{
+    font-family: 'Argentum Sans', sans-serif;
+    font-size: 20px;
+    margin-left: -45px;
+}
+
