--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -86,7 +86,16 @@ body{
     font-size: 22px;
     text-align: center;
     font-family: 'Argentum Sans', sans-serif;
-    margin-top: 10px;
+    margin-top: 21px;
+}
+
+.sottotitolo2{
+    color: white;
+    font-family: 'Argentum Sans', sans-serif;
+    margin-top: 21px;
+    text-align: center;
+    font-size: 22px;
+    text-decoration: underline;
 }
 
 .btn{
@@ -101,5 +110,10 @@ body{
     font-family: 'Argentum Sans', sans-serif;
     font-size: 20px;
     margin-left: -45px;
+    font-weight: bold;
+}
+
+.freccetta{
+    
 }
 
