--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -97,13 +97,18 @@ body{
     font-size: 22px;
     text-decoration: underline;
 }
-
+.submit{
+    display: flex;
+    flex-direction: row;
+    text-align: center;
+    justify-content: center;
+    
+}
 .btn{
     width: 150px;
     height: 50px;
     border-radius: 25px;
-    margin-left: 850px;
-    margin-top: 20px;
+    margin-top: 1rem;
 }
 
 .inizia{
