--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -100,7 +100,6 @@ body{
 .submit{
     display: flex;
     flex-direction: row;
-    text-align: center;
     justify-content: center;
     
 }
@@ -109,16 +108,20 @@ body{
     height: 50px;
     border-radius: 25px;
     margin-top: 1rem;
+    display: flex;
+    flex-direction: row;
+    background-color: white;
 }
 
 .inizia{
     font-family: 'Argentum Sans', sans-serif;
     font-size: 20px;
-    margin-left: -45px;
     font-weight: bold;
+    margin-left: 28px;
+    margin-top: 13px;
 }
 
 .freccetta{
-    
+    margin-top: 11px;
+    margin-left: 17px;
 }
-
