--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -8,6 +8,7 @@
     margin: 0px;
     padding: 0px;
     
+    
 }
 body{
     background-color: black;
@@ -97,31 +98,46 @@ body{
     font-size: 22px;
     text-decoration: underline;
 }
-.submit{
+
+.container{
     display: flex;
     flex-direction: row;
     justify-content: center;
-    
-}
-.btn{
-    width: 150px;
-    height: 50px;
     border-radius: 25px;
-    margin-top: 1rem;
-    display: flex;
-    flex-direction: row;
+    margin-top: 2.5rem;
+    text-align: center;
+}
+
+.btn{
     background-color: white;
+    padding: 15px 20px 15px 20px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.btn a{
+    margin-left: 15px;
 }
 
 .inizia{
-    font-family: 'Argentum Sans', sans-serif;
-    font-size: 20px;
     font-weight: bold;
-    margin-left: 28px;
-    margin-top: 13px;
+    font-size: 20px;
+    font-family: 'Argentum Sans', sans-serif;
 }
 
-.freccetta{
-    margin-top: 11px;
-    margin-left: 17px;
+.btn2{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-left: 50px;
+}
+
+.sottobtn{
+    color: white;
+    margin-right: 5px;
+    font-size: 22px;
+    font-weight: medium;
+    font-family: 'Argentum Sans', sans-serif;
 }
