--- a/style/style-regster.css
+++ b/style/style-regster.css
@@ -16,7 +16,14 @@
     justify-content: center;
     align-items: center;
 }
-.form > input{
+.form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1.5rem;
+}
+.inputs > input{
     justify-content: space-between;
     align-items: center;
     border-radius: 0.313rem;
@@ -26,7 +33,7 @@
     padding-left: 5px;
     font-family: 'Argentum Sans', sans-serif;
 }
-.form{
+.inputs{
     display: grid;
     grid-template-columns: auto auto;
     row-gap: 1.5rem;
