--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -14,6 +14,10 @@ body{
     background-color: black;
 }
 
+.quarantacinquepx{
+    font-size: 45px;
+}
+
 .page{
     width: 100%;
    
@@ -141,3 +145,49 @@ body{
     font-weight: medium;
     font-family: 'Argentum Sans', sans-serif;
 }
+
+.container2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    border-radius: 25px;
+    margin-top: 104px;
+    text-align: center;
+}
+
+.boxwhite{
+    width: 250px;
+    height: 320px;
+    border-radius: 25px;
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.testo{
+    font-family: 'Argentum Sans', sans-serif;
+    font-size: 35px;
+    font-weight: medium;
+    margin-bottom: 230px;
+}
+
+.textright{
+    width: 30%;
+    margin-left: 30px;
+    font-family: 'Argentum Sans', sans-serif;
+    font-size: 15px;
+    font-weight: medium;
+    margin-top: 20px;
+    color: white;
+    display: flex;
+    justify-content: left;
+    text-align: left;
+}
+
+
+.sotto1{
+    width: 62px;
+}
+
