--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -7,8 +7,6 @@
 *{
     margin: 0px;
     padding: 0px;
-    
-    
 }
 body{
     background-color: black;
@@ -20,7 +18,6 @@ body{
 
 .page{
     width: 100%;
-   
 }
 
 .navbar{
@@ -153,6 +150,7 @@ body{
     border-radius: 25px;
     margin-top: 104px;
     text-align: center;
+    margin-left: 215px;
 }
 
 .boxwhite{
@@ -168,7 +166,7 @@ body{
 
 .testo{
     font-family: 'Argentum Sans', sans-serif;
-    font-size: 35px;
+    font-size: 28px;
     font-weight: medium;
     margin-bottom: 230px;
 }
@@ -178,16 +176,15 @@ body{
     margin-left: 30px;
     font-family: 'Argentum Sans', sans-serif;
     font-size: 15px;
-    font-weight: medium;
     margin-top: 20px;
     color: white;
     display: flex;
+    flex-direction: column;
     justify-content: left;
     text-align: left;
+    gap: 0,75rem;
 }
 
-
-.sotto1{
-    width: 62px;
+.textright ol{
+    margin-bottom: 12px;
 }
-
