--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -34,7 +34,7 @@ body{
     height: 3.875rem;
     background-color: white;
     margin-left: 20px;
-    margin-top: 10px;
+    margin-top: 7px;
 }
 
 .contact1{
@@ -160,15 +160,16 @@ body{
     background-color: white;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: column;
     justify-content: center;
+    padding-top: 25px;
 }
 
 .testo{
     font-family: 'Argentum Sans', sans-serif;
     font-size: 28px;
     font-weight: medium;
-    margin-bottom: 230px;
+    margin-bottom: 24px;    
 }
 
 .textright{
@@ -187,4 +188,15 @@ body{
 
 .textright ol{
     margin-bottom: 12px;
+}
+
+#columnimages{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#columnimages img{
+    margin-bottom: 50px;
 }
