--- a/style/style-dash.css
+++ b/style/style-dash.css
@@ -1,15 +1,18 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Basement Grotesque', sans-serif;
 }
 .page{
     background-color: #ECECEC;
+    display: flex;
+    flex-direction: row;
+    font-family: 'Basement Grotesque', sans-serif;
 }
 .leftBar{
    max-width: 20.625rem;
    height: 100vh;
    background-color: white;
+   padding: 0 1rem;
 }
 .logo{
     width: 3.486rem;
@@ -24,27 +27,24 @@
 }
 .headerLeft{
     display: flex;
-    gap: 5rem;
+    gap: 1rem;
     padding-top: 1rem;
-    padding-left: 1rem;
     margin-bottom: 2rem;
+    font-family: 'Argentum Sans', sans-serif;
 }
 .switcher{
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    justify-items: center;
-    background-color: #ECECEC;
-    width: 18rem;
-    height: 4rem;
-    border-radius: 0.313rem;
-    margin: auto;
-    text-align: left;
+flex-direction: row;
+justify-content: space-between;
+align-items: center;
+padding: 20px 15px;
+gap: 95px;
+
+background: #ECECEC;
+border-radius: 15px;
 }
 .switcher>span{
-    margin-top: 1.5rem;
-    margin-left: 1.5rem;
-    font-size: 1.125rem;
+    font-size: 1rem;
     font-weight: 500;
     color: black;
     border-radius: 25px;
@@ -65,25 +65,36 @@
 }
 .scelte::before{
     content: "";
-    width: 75%;
+    width: 242px;
     height: 0.169rem;
     background-color: black;
     opacity: 20%;
     margin-top: 1.5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin-bottom: 0.5rem;
-    margin-left: 2.5rem;
+    margin-left: 1rem;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0px;
+    gap: 10px;
 }
+
+.scelte{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+    gap: 23px;
+} 
+
 .scelte li {
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: start;
-    margin-top: 1.75rem;
     margin-bottom: 1.438rem;
-    margin-left: 2rem;
+
 }
 .ariaText{
     font-size: 1rem;
@@ -120,4 +131,52 @@
     font-weight: 500;
     text-decoration: underline;
 
+}
+
+.whiteBox{
+    background-color: #fff;
+    border-radius: 1rem;
+    width: 1111px;
+    height: 149px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: 8rem;
+}
+
+.main{
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+}
+
+.profile{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 1rem;
+    padding-right: 3rem;
+    padding-top: 2rem;
+
+}
+
+.notifyicon{
+    width: 42px;
+    height: 42px;
+}
+
+.profileBtn{
+    width: 83px;
+    height: 83px;
+    align-items: center;
+}
+    
+.icons{
+    padding-bottom: 1rem;
+}
+
+.type{
+    width: 6rem;
+    height: 6rem;
 }
