--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -219,3 +219,60 @@ body{
     width: 100%;
     height: 2px;
 }
+
+.page2{
+    width: ;
+    background-color: white ;
+}
+
+.titolo2{
+    color: black;
+    font-family: 'Argentum Sans', sans-serif;
+    font-size: 100px;
+    text-align: center;
+    margin-top: 90px;
+}
+
+.sottotitolo1{
+    color: black;
+    font-size: 22px;
+    text-align: center;
+    font-family: 'Argentum Sans', sans-serif;
+    margin-top: 21px;
+}
+
+.sottotitolo3{
+    color: black;
+    font-family: 'Argentum Sans', sans-serif;
+    margin-top: 21px;
+    text-align: center;
+    font-size: 22px;
+}
+
+.container3{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin-top: 2.5rem;
+    text-align: center;
+}
+
+.box{
+    /*padding: 90px 110px;*/
+    height: 250px;
+    width: 370px;
+    background-color: black;
+    border-radius: 20px;
+    margin-left: 70px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.box p{
+    color: white;
+    font-family: 'Argentum Sans', sans-serif;
+    font-size: 24px;
+    font-weight: medium;
+    margin-top: 145px;
+}
