--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -260,7 +260,7 @@ body{
 .box{
     /*padding: 90px 110px;*/
     height: 250px;
-    width: 370px;
+    width: 380px;
     background-color: black;
     border-radius: 20px;
     margin-left: 70px;
@@ -274,5 +274,52 @@ body{
     font-family: 'Argentum Sans', sans-serif;
     font-size: 24px;
     font-weight: medium;
-    margin-top: 145px;
+    margin-top: 24px;
 }
+
+.box label{
+    color: #9F1609;
+    font-family: 'Argentum Sans', sans-serif;
+    font-size: 16px;
+    font-weight: medium;
+}
+
+/*.box img{
+    height: 147px;
+    width: 147px;
+    padding-bottom: 24px;
+}*/
+
+/*.containerbox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    min-height: 100vh;
+    background-color: #f5f5f5;
+}*/
+
+.box{
+    position: relative;
+    width: 380px;
+    height: 225px;
+    background-color: black;
+    border-radius: 20px;
+    box-shadow: linear-gradient(45deg, #fbda61, #ff5acd);
+    margin-top: 112px;
+}
+
+.imgbox{
+    position: absolute;
+    left: 50%;
+    top: -25%;
+    transform: translateX(-50%);
+    width: 147px;
+    height: 147px;
+    border-radius: 20px;
+}
+
+.testino{
+    margin-top: 85px;
+}
+
