--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -18,6 +18,7 @@ body{
 
 .page{
     width: 100%;
+    padding-bottom: 150px;
 }
 
 .navbar{
@@ -223,6 +224,7 @@ body{
 .page2{
     width: 100%;
     background-color: white ;
+    padding-top: 25px;
 }
 
 .titolo2{
