--- a/style/style-dash.css
+++ b/style/style-dash.css
@@ -106,30 +106,48 @@
     justify-content: center;
     text-align: center;
 }
-.supporto{
+
+.supportContainer{
+    
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 0;
+    justify-content: flex-end;
+}
+
+.supportContainer a{
+    text-decoration: none;
+    position: relative;
+    
+}
+
+.support{
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    position: fixed;
-    bottom: 5%;
-    left: 2rem;
-}
-.supportText{
-    font-size: 1rem;
-    font-weight: 500;
-    color: #fff;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-70%, 10%);
+    bottom: 1.5rem;
 }
-.faqText{
-    color: #9F1609;
-    font-size: 1rem;
-    font-weight: 500;
-    text-decoration: underline;
 
+.btn{
+    align-items: center;
+    display: flex;
+    justify-content: center;
+    background-color: #9F1609;
+    width: 8rem;
+    height: 3.25rem;
+    align-items: center;
+    border-radius: 1rem;
+}
+
+.btn span{
+    color: white;
+    
+}
+.faq a{
+    color: #9F1609;
 }
 
 .boxContainer{
