--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -225,6 +225,7 @@ body{
     width: 100%;
     background-color: white ;
     padding-top: 25px;
+    padding-bottom: 150px;
 }
 
 .titolo2{
@@ -259,24 +260,12 @@ body{
     text-align: center;
 }
 
-.box{
-    /*padding: 90px 110px;*/
-    height: 250px;
-    width: 380px;
-    background-color: black;
-    border-radius: 20px;
-    margin-left: 70px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
 .box p{
     color: white;
     font-family: 'Argentum Sans', sans-serif;
     font-size: 24px;
     font-weight: medium;
-    margin-top: 24px;
+    margin-top: 100px;
 }
 
 .box label{
@@ -286,21 +275,6 @@ body{
     font-weight: medium;
 }
 
-/*.box img{
-    height: 147px;
-    width: 147px;
-    padding-bottom: 24px;
-}*/
-
-/*.containerbox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: row;
-    min-height: 100vh;
-    background-color: #f5f5f5;
-}*/
-
 .box{
     position: relative;
     width: 380px;
@@ -309,19 +283,39 @@ body{
     border-radius: 20px;
     box-shadow: linear-gradient(45deg, #fbda61, #ff5acd);
     margin-top: 112px;
+    margin-left: 70px;
+    display: flex;
+    flex-direction:column ;
+    justify-content: center;
+    
 }
 
 .imgbox{
     position: absolute;
-    left: 50%;
+    left: 48%;
     top: -25%;
     transform: translateX(-50%);
     width: 147px;
     height: 147px;
     border-radius: 20px;
+    overflow: hidden;
+    transition: 3s;
+}
+.box:hover{
+    height: 400px;
+}
+.card:hover .imgbox{
+    width: 200px;
+    height: 200px;
+}
+.imgbox img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+
 }
 
-.testino{
-    margin-top: 85px;
-}
 
