--- a/style/style-dash.css
+++ b/style/style-dash.css
@@ -129,11 +129,12 @@
     justify-content: space-between;
     position: absolute;
     bottom: 1.5rem;
+    gap: 2rem;
 }
 
 .btn{
-    align-items: center;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: #9F1609;
     width: 8rem;
@@ -144,10 +145,12 @@
 
 .btn span{
     color: white;
-    
+    padding-bottom: 1.5rem;
 }
+
 .faq a{
     color: #9F1609;
+    text-decoration: underline;
 }
 
 .boxContainer{
@@ -202,7 +205,7 @@
     height: 83px;
     align-items: center;
     border: 5px solid #9F1609;
-    border-radius: 55%;
+    border-radius: 50%;
 }
     
 .icons{
