--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -43,13 +43,10 @@ body{
     font-family: 'Argentum Sans', sans-serif;
     font-size: 15px;
     font-weight: bold;
-    margin-left: 200px;
-    
-}
-
-.contact1 p{
-    margin-right: 10px;
-    margin-left: 25px;
+    display: flex;
+    justify-content: space-between;
+    gap: 40px;
+    padding-left: 275px;
 }
 
 .contact2{
@@ -57,19 +54,15 @@ body{
     font-family: 'Argentum Sans', sans-serif;
     font-size: 15px;
     font-weight: bold;
-}
-
-.contact2 p{
-    margin-right: 10px;
-    margin-left: 25px;
-}
-
-.navbar div{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    gap: 40px;
 }
-
+a{
+    text-decoration: none;
+    color: black;
+}
 .navbar{
     position: fixed;
     top: 0;
@@ -315,7 +308,33 @@ body{
     width: 100%;
     height: 100%;
     object-fit: cover;
-
 }
 
+.container3{
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+
+.page3{
+    width: 100%;
+    background-color: black ;
+    padding-top: 25px;
+    padding-bottom: 150px;
+}
+
+.container-page3{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 74px;
+    text-align: center;
+    color: white;
+}
+
+.container-page3 h1{
+    font-size: 100px;
+    font-weight: bold;
+    font-family: 'Argentum Sans', sans-serif;
+}
 
