--- a/static/landing/style-landing.css
+++ b/static/landing/style-landing.css
@@ -246,11 +246,15 @@ a{
 }
 
 .container3{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+    
     margin-top: 2.5rem;
     text-align: center;
+    
+    display: grid;
+    flex-direction:column ;
+    justify-content: center;
+    grid-template-columns: auto auto auto auto;
+    column-gap: 30px;
 }
 
 .box p{
@@ -276,11 +280,6 @@ a{
     border-radius: 20px;
     box-shadow: linear-gradient(45deg, #fbda61, #ff5acd);
     margin-top: 112px;
-    margin-left: 70px;
-    display: flex;
-    flex-direction:column ;
-    justify-content: center;
-    
 }
 
 .imgbox{
@@ -294,13 +293,16 @@ a{
     overflow: hidden;
     transition: 3s;
 }
+
 .box:hover{
     height: 400px;
 }
+
 .card:hover .imgbox{
     width: 200px;
     height: 200px;
 }
+
 .imgbox img{
     position: absolute;
     top: 0;
@@ -308,12 +310,6 @@ a{
     width: 100%;
     height: 100%;
     object-fit: cover;
-}
-
-.container3{
-    display: flex;
-    justify-content: center;
-    align-items: center;    
 }
 
 .page3{
@@ -336,5 +332,13 @@ a{
     font-size: 100px;
     font-weight: bold;
     font-family: 'Argentum Sans', sans-serif;
+}
+
+.sottotitolopage3{
+    font-size: 55px;
+    font-weight: bold;
+    font-family: 'Argentum Sans', sans-serif;
+    color: #9F1609;
+    margin-top: 34px;
 }
 
